# github-repo-controller-manager

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
repo_controller_manager/: __init__.py
repo_controller_manager/tests/: test_repo_controller_manager.py
