[metadata]
name = repo-controller-manager
summary = k8s Git Repo Controller Manager
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    repo_controller_manager

[compile_catalog]
directory = repo_controller_manager/locale
domain = repo_controller_manager

[update_catalog]
domain = repo_controller_manager
output_dir = repo_controller_manager/locale
input_file = repo_controller_manager/locale/repo_controller_manager.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = repo_controller_manager/locale/repo_controller_manager.pot
